<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tillana_bold"
            android:text="@string/app_name"
            android:textColor="@color/textColor" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/moods"
            android:layout_width="0dp"
            android:layout_height="@dimen/navigation_height"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/moods"
            android:textAlignment="center" />

        <View
            android:layout_width="2dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"></View>

        <TextView
            android:id="@+id/artists"
            android:layout_width="0dp"
            android:layout_height="@dimen/navigation_height"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/artists"
            android:textAlignment="center" />

        <View
            android:layout_width="2dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"></View>

        <TextView
            android:id="@+id/albums"
            android:layout_width="0dp"
            android:layout_height="@dimen/navigation_height"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/albums"
            android:textAlignment="center" />

    </LinearLayout>

    <GridView
        android:id="@+id/moods_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:clickable="true"
        android:columnWidth="100dp"
        android:focusable="true"
        android:gravity="center"
        android:horizontalSpacing="8dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="8dp"></GridView>

</LinearLayout>
